// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v1alpha;

import "wfa/measurement/api/v1alpha/advertiser.proto";

option java_package = "org.wfanet.measurement.api.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "DataProviderProto";

// Representation of a data provider.
message DataProvider {
  message Key {
    string data_provider_id = 1;
  }
  // Resource key.
  Key key = 1;

  // Display name of the data provider.
  string display_name = 2;
}

// Representation of a campaign within a data provider's system.
message Campaign {
  message Key {
    string data_provider_id = 1;
    string campaign_id = 2;
  }
  // Resource key.
  Key key = 1;

  // Resource key of the Advertiser associated with this Campaign.
  Advertiser.Key advertiser = 2;

  // Display name.
  string display_name = 3;

  // ID referencing the campaign in an external system, provided by the data
  // provider.
  string campaign_reference_id = 4;
}